--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div id="root">
         <input type="text" v-model="message">
         <h1>{{message}}</h1>
+        <img src="" alt="" v-bind:src="urlGrumpy">
     </div>
     <script src="vueScript.js"></script>
 </body>
